--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
 gunicorn==19.7.1
 Markdown==2.6.11
+pkg-resources==0.0.0
 PyJWT==1.5.3
+whitenoise==3.3.1
